backend-node/seed_output.txt

> menux-backend-node@1.0.0 seed:orders
> DEBUG=typeorm:query ts-node -r tsconfig-paths/register src/infrastructure/database/seeds/seed-order-data.ts

/Users/pamplonicade/ShiftLabs/backoffice-menux/backend-node/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/infrastructure/database/seeds/seed-order-data.ts(37,33): error TS2769: No overload matches this call.
  Overload 1 of 3, '(entityLikeArray: DeepPartial<Waiter>[]): Waiter[]', gave the following error.
    Object literal may only specify known properties, and 'name' does not exist in type 'DeepPartial<Waiter>[]'.
  Overload 2 of 3, '(entityLike: DeepPartial<Waiter>): Waiter', gave the following error.
    Object literal may only specify known properties, and 'isActive' does not exist in type 'DeepPartial<Waiter>'.

    at createTSError (/Users/pamplonicade/ShiftLabs/backoffice-menux/backend-node/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/pamplonicade/ShiftLabs/backoffice-menux/backend-node/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/pamplonicade/ShiftLabs/backoffice-menux/backend-node/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/pamplonicade/ShiftLabs/backoffice-menux/backend-node/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/pamplonicade/ShiftLabs/backoffice-menux/backend-node/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (/Users/pamplonicade/ShiftLabs/backoffice-menux/backend-node/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2769 ]
}
npm notice
npm notice New major version of npm available! 10.9.3 -> 11.7.0
npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.7.0
npm notice To update run: npm install -g npm@11.7.0
npm notice
